Adjust c50 module for Vert.x 5